# jnipp

./: CMakeLists.txt  jnipp.cpp  makefile
.github/workflows/: jnipp.yml
tests/: CMakeLists.txt  main.cpp
